fix beta taxonomy alignment

--- a/themes/console-home/static/css/page/betas.css
+++ b/themes/console-home/static/css/page/betas.css
@@ -84,8 +84,10 @@ p.beta-card-description {
     margin-bottom: var(--space2);
 }
 
-.beta-card-content .right > .taxonomy > *:not(:last-child) {
-    margin-right: var(--space3);
+@media (max-width: 1359px) {
+    .beta-card-content .right > .taxonomy > *:not(:last-child) {
+        margin-right: var(--space3);
+    }
 }
 
 @media (max-width: 768px) {
